# opencv

./: .gitignore  CMakeLists.txt  README.md  config.cfg  config.cpp  config.hpp  ddrsgm_config.cfg  images.hpp  images_process.cpp  images_read.cpp  images_write.cpp  main.cpp  precomp.hpp
include/: qt.h
include/thread/: iostream  list
src/: CMakeLists.txt  precomp.cpp
src/copy_images/: CMakeLists.txt  copy_images.cpp
